<resources>
    <string name="app_name">Qué tanto sabes del UDB</string>
    <string name="tv_question_String">¿Preguntas?</string>
    <string name="tv_countdown_String">00</string>
    <string name="btn_db_String">DB</string>
    <string name="btn_dbz_String">DBZ</string>
    <string name="btn_dbgt_String">DBGT</string>
    <string name="btn_dbs_String">DBS</string>
    <string name="tv_shame_String">¡Que pena!</string>
    <string name="tv_almost_String">¡Casi lo logras!</string>
    <string name="tv_congrats_String">¡Felicidades!</string>
    <string name="tv_results_String">¡Has completado el test!</string>
    <string name="tv_sentenceOne_String">¡Vámos, puedes hacerlo mejor</string>
    <string name="tv_sentenceTwo_String">¡Casi lo logras, no te rindas!</string>
    <string name="tv_sentenceThree_String">¡Así se hace guerrero z!</string>
    <string name="tv_results2_String">Estos son tus resultados: </string>
    <string name="tv_correctas_String">Respuestas correctas: </string>
    <string name="tv_incorrectas_String">Respuestas incorrectas: </string>
    <string name="btn_results_String">Volver al menú</string>
    <string name="tv_answer_String">Respuesta:</string>
    <string name="tv_answertxt_String">AQUI VA LA RESPUESTA:</string>
    <string name="btn_ag_String">Jugar</string>
    <string name="btn_smg_String">Modo Historia (prox)</string>
    <string name="btn_htp_String">¿Cómo Jugar?</string>
    <string name="btn_menu_String">Menú</string>
    <string name="btn_continue_String">Continuar</string>
    <string name="tv_abouttitle_String">Acerca de</string>
    <string name="tv_aboutapptitle_String">Sobre la Aplicación</string>
    <string name="btn_storymode_String">Modo Historia </string>
    <string name="tv_abouttext_String">¿Qué tanto sabes sobre el UDB? es un juego no oficial de preguntas y repuestas acerca de uno de los animes más famosos de la historia. ¡Pon a prueba tus conocimientos y descubre que tan fan de esta serie eres!
    Diviértete y comparte con tus amigos.</string>
    <string name="tv_creditstitle_String">Créditos de los Iconos</string>
    <string name="tv_creditstext_String">De: www.freepik.es</string>
    <string name="tv_policytitle_String">Política de Privacidad</string>
    <string name="tv_policytext_String">https://gatonaranjaentmt.blogspot.com/2023/12/hmdykodbu-privacy-policy-en.html</string>
    <string name="tv_instructionstitle_String">Instrucciones</string>
    <string name="tv_instructionOne_String">•Tienes 30 segundos para responder cada pregunta.</string>
    <string name="tv_instructionTwo_String">•Las preguntas aparecerán en orden aleatorio.</string>
    <string name="tv_instructionThree_String">•Consigue el mayor puntaje posible en cada partida.</string>
    <string name="tv_config_String">Configuración</string>
    <string name="tv_language_String">Idioma</string>
    <string name="tv_spanish_String">Español</string>
    <string name="tv_english_String">Inglés</string>
    <string name="tv_sound_String">Sonido</string>
    <string name="tv_music_String">Música</string>
    <string name="tv_fx_String">Efectos</string>
    <string name="tv_stats_title_String">Estadísticas</string>
    <string name="tv_record_String">Mejor resultado</string>
    <string name="tv_correctasDos_String">Respuestas correctas </string>
    <string name="tv_incorrectasDos_String">Respuestas incorrectas </string>
    <string name="tv_backtoMenuTitle_String">¿Seguro que deseas salir? </string>
    <string name="tv_backtoMenuText_String">Perderas todo el progreso actual </string>
    <string name="btn_backtoMenuYes_String">Sí</string>
    <string name="btn_backtoMenuCancel_String">Cancelar</string>
    <string name="tv_resumeText_String">En pausa</string>
    <string name="btn_resume">Reanudar</string>
    <string name="force_update_title">¡Actualización Disponible!</string>
    <string name="force_update_description">Se le recomienda actualizar la aplicación para obtener el acceso a nuevas funciones y/o para la corrección de errores. ¡Con el fin de brindarle una mejor experiencia de juego! </string>
    <string name="btn_update">Actualizar</string>
    <string name="que1_String">"¿Inicialmente en que obra literaria se basó la serie?"</string>
    <string name="que1_op1_String">"Viaje al Oeste"</string>
    <string name="que1_op2_String">"Bandidos del Pantano"</string>
    <string name="que1_op3_String">"El romance de los Tres Reinos"</string>
    <string name="que1_op4_String">"Sueño en el Pabellón Rojo"</string>
    <string name="que1_feedback_String">"La historia y los personajes de Dragon Ball están inspirados en parte por la popular novela china Viaje al Oeste, a pesar de que difieren de la novela rápidamente."</string>
    <string name="que2_String">"¿Cómo se conocen Gokú y Bulma?"</string>
    <string name="que2_op1_String">"Son amigos de la infancia"</string>
    <string name="que2_op2_String">"Son vecinos"</string>
    <string name="que2_op3_String">"Bulma lo atropella con su auto"</string>
    <string name="que2_op4_String">"Asistieron a la misma escuela"</string>
    <string name="que2_feedback_String">"Gokú, un niño huérfano pero fuerte que vive solo en el Monte Paoz, y Bulma, una adolescente de 16 años, se conocen cuando ella lo atropella mientras conduce por el Monte Paoz."</string>
    <string name="que3_String">"¿Qué funcion tiene el Radar del Dragón?"</string>
    <string name="que3_op1_String">"Llamar a los Guerreros Z"</string>
    <string name="que3_op2_String">"Localizar las Esferas del Dragón"</string>
    <string name="que3_op3_String">"Llamar a Bulma"</string>
    <string name="que3_op4_String">"Localizar Dragones"</string>
    <string name="que3_feedback_String">"El Radar del Dragón, es un radar que ayuda a buscar las siete legendarias Esferas del Dragón. Fue creado por Bulma y es mencionado desde el primer capítulo de la serie."</string>
    <string name="que4_String">"¿Las Esferas del Dragón se utilizan para?"</string>
    <string name="que4_op1_String">"Teletransportarse"</string>
    <string name="que4_op2_String">"Conceder uno o varios deseos"</string>
    <string name="que4_op3_String">"Destruir enemigos poderosos"</string>
    <string name="que4_op4_String">"Viajar en el tiempo"</string>
    <string name="que4_feedback_String">"Cuando se reúnen se utilizan para invocar a un dragón que concede uno o varios deseos. Esta invocación hace que el cielo del planeta donde se activen se nuble y oscurezca."</string>
    <string name="que5_String">"¿Cuál es la esfera que posee Pilaf al inicio de DB?"</string>
    <string name="que5_op1_String">"4 Estrellas"</string>
    <string name="que5_op2_String">"7 Estrellas"</string>
    <string name="que5_op3_String">"6 Estrellas"</string>
    <string name="que5_op4_String">"1 Estrella"</string>
    <string name="que5_feedback_String">"Pilaf decidió emprender por primera vez, la búsqueda de las esferas del dragón, para pedirle a Shen Long ser el rey absoluto del mundo. En su primera aparición en la serie, se nos muestra que posee la esfera de 1 estrella."</string>
    <string name="que6_String">"¿Cómo consiguen Bulma y Gokú su tercer esfera del dragón?"</string>
    <string name="que6_op1_String">"Fue un regalo del Maestro Roshi"</string>
    <string name="que6_op2_String">"Tuvieron que pelear con Pilaf"</string>
    <string name="que6_op3_String">"La encontraron en la cima de una montaña"</string>
    <string name="que6_op4_String">"La compraron en una tienda de antiguedades"</string>
    <string name="que6_feedback_String">"Bulma nota que tiene una Esfera del Dragón (la de 3 estrellas), y le pide al Maestro Roshi que se la otorgue como un premio por haber ayudado a Tortuga."</string>
    <string name="que7_String">"¿Cuál es el nombre que recibe la escuela del maestro Roshi?"</string>
    <string name="que7_op1_String">"Escuela del Lobo"</string>
    <string name="que7_op2_String">"Escuela de la Grulla"</string>
    <string name="que7_op3_String">"Escuela de la Tortuga"</string>
    <string name="que7_op4_String">"Escuela del Dragón"</string>
    <string name="que7_feedback_String">"La Escuela de la Tortuga es una de las escuelas de artes marciales, fundada por el Maestro Roshi. Los estudiantes 'estrella' fueron Gokú, Krilin y Yamcha."</string>
    <string name="que8_String">¿Quién fue el creador del Kamehameha?</string>
    <string name="que8_op1_String">Maestro Roshi</string>
    <string name="que8_op2_String">Abuelo Gohan</string>
    <string name="que8_op3_String">Gokú</string>
    <string name="que8_op4_String">Maestro Tsuru</string>
    <string name="que8_feedback_String">"Fue creada años antes del inicio de la serie por el Maestro Roshi, quien requirió de un arduo entrenamiento de 50 años para dominarla. Años después una nueva generación perfeccionaría dicha técnica, en especial Gokú."</string>
    <string name="que9_String">"¿De qué color es la nube voladora?"</string>
    <string name="que9_op1_String">"Verde"</string>
    <string name="que9_op2_String">"Naranja"</string>
    <string name="que9_op3_String">"Amarilla"</string>
    <string name="que9_op4_String">"Rosa"</string>
    <string name="que9_feedback_String">"Es una simple nube de color amarillo que sirve como medio de transporte para aquel que pueda utilizarla. Solamente las personas de corazón puro pueden subirse a ella, y quien no cumpla este requisito la traspasará como una nube común."</string>
    <string name="que10_String">"¿Cuáles son las bases del entrenamiento del Maestro Roshi?"</string>
    <string name="que10_op1_String">"Hay que trabajar"</string>
    <string name="que10_op2_String">"Hay que aprender"</string>
    <string name="que10_op3_String">"Hay que jugar"</string>
    <string name="que10_op4_String">"Todas las anteriores son correctas"</string>
    <string name="que10_feedback_String">“Hay que trabajar, hay que aprender, hay que comer, hay que descansar y también hay que jugar. Esas son las bases del entrenamiento del maestro Roshi para tener una buena condición.”"</string>
    <string name="que11_String">"¿En un principio que deseo quería Bulma que Shenlong le concediera?"</string>
    <string name="que11_op1_String">"Vida eterna"</string>
    <string name="que11_op2_String">"Crecer"</string>
    <string name="que11_op3_String">"Riqueza"</string>
    <string name="que11_op4_String">"Suministro infinito de fresas"</string>
    <string name="que11_feedback_String">"En un principio Bulma le pediría a Shen Long que le otorgara un suministro infinito de fresas."</string>
    <string name="que12_String">"¿Quién es en realidad Jackie Chun?"</string>
    <string name="que12_op1_String">"Maestro Roshi"</string>
    <string name="que12_op2_String">"Abuelo Gohan"</string>
    <string name="que12_op3_String">"Tao Pai Pai"</string>
    <string name="que12_op4_String">"Maestro Shen"</string>
    <string name="que12_feedback_String"> "Realmente el personaje de "Jackie Chun" es simplemente el Maestro Roshi con una peluca. Para mostrar a sus alumnos, Gokú y Krillin, que a pesar de lo fuertes que se habían vuelto, todavía hay muchos guerreros en el mundo que son más poderosos que ellos."</string>
    <string name="que13_String">"¿Quién es el líder de la pandilla de Pilaf?"</string>
    <string name="que13_op1_String">"Pilaf"</string>
    <string name="que13_op2_String">"Mai"</string>
    <string name="que13_op3_String">"Shu"</string>
    <string name="que13_op4_String">"Gokú"</string>
    <string name="que13_feedback_String">"La pandilla de Pilaf es un grupo dirigido por Pilaf que trata de obtener las Esferas del Dragón. Ellos fueron los primeros villanos principales de la serie en aparecer, siendo incapaces de obtener la victoria hasta DB GT. "</string>
    <string name="que14_String">"¿Qué premio se otorga al ganador del Torneo de las Artes Marciales?"</string>
    <string name="que14_op1_String">"Una medalla"</string>
    <string name="que14_op2_String">"Una esfera del dragón"</string>
</resources>