<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="24dp"
    android:layout_gravity="top"
    android:paddingStart="8dp"
    android:paddingEnd="8dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_dialog_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="21dp"
            android:gravity="center"
            android:text="@string/force_update_title"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="@dimen/_16sdp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_dialog_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_18sdp"
            android:gravity="center"
            android:text="@string/force_update_description"
            android:textColor="@color/black"
            android:textSize="@dimen/_16sdp" />

        <Button
            android:id="@+id/btn_update"
            android:layout_width="@dimen/_180sdp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/btn_rounded"
            android:backgroundTint="@color/naranjad"
            android:text="@string/btn_update">
        </Button>

<!--        <com.google.android.material.button.MaterialButton-->
<!--            android:id="@+id/mbt_dialog_action"-->
<!--            android:layout_width="240dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="18dp"-->
<!--            />-->
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>