<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ConfigFragment"
    android:background="@color/white">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/circle_btn"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbar"
        app:srcCompat="@drawable/ic_back"
        app:tint="@color/crimson"/>

    <TextView
        android:id="@+id/tv_config"
        android:layout_width="340dp"
        android:layout_height="60dp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        android:background="@drawable/roundedtv"
        android:backgroundTint="@color/chocolate"
        android:gravity="center"
        android:inputType="text"
        android:text="@string/tv_config_String"
        android:textColor="@color/cornsilk"
        android:textSize="35sp" />

    <TextView
        android:id="@+id/tv_language"
        android:layout_width="@dimen/_220sdp"
        android:layout_height="60dp"
        android:background="@drawable/buttonbordercolor"
        android:textColor="@color/chocolate"
        android:gravity="center"
        android:text="@string/tv_language_String"
        android:textSize="30sp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_config"/>

    <GridLayout
        android:id="@+id/languageGrid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_language"
        android:columnCount="2"
        android:rowCount="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"

            >

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_spanish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="25dp"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/floralwhite"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/iv_spanish"
                        android:layout_width="@dimen/_110sdp"
                        android:layout_height="@dimen/_90sdp"
                        app:srcCompat="@drawable/mexicoflag" />

                    <TextView
                        android:id="@+id/tv_spanish"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:background="@color/naranjad"
                        android:gravity="center"
                        android:text="@string/tv_spanish_String"
                        android:textColor="@color/cornsilk"
                        android:textSize="26sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_english"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="0dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/floralwhite"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/iv_english"
                        android:layout_width="@dimen/_110sdp"
                        android:layout_height="@dimen/_90sdp"
                        app:srcCompat="@drawable/usaflag" />

                    <TextView
                        android:id="@+id/tv_english"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:background="@color/naranjad"
                        android:gravity="center"
                        android:text="@string/tv_english_String"
                        android:textSize="26sp"
                        android:textColor="@color/cornsilk"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </GridLayout>

    <TextView
        android:id="@+id/tv_sound"
        android:layout_width="@dimen/_220sdp"
        android:layout_height="60dp"
        android:layout_marginTop="50dp"
        android:text="@string/tv_sound_String"
        android:gravity="center"
        android:textSize="30sp"
        android:textColor="@color/chocolate"
        android:background="@drawable/buttonbordercolor"
        app:layout_constraintBottom_toTopOf="@+id/soundGrid"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/languageGrid"
        />

    <GridLayout
        android:id="@+id/soundGrid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="@dimen/_20sdp"
        app:layout_constraintTop_toBottomOf="@+id/tv_sound"
        android:columnCount="2"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            >

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_music"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="25dp"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/floralwhite"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/iv_music"
                        android:layout_width="@dimen/_110sdp"
                        android:layout_height="@dimen/_90sdp"
                        />

                    <TextView
                        android:id="@+id/tv_music"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:background="@color/naranjad"
                        android:gravity="center"
                        android:text="@string/tv_music_String"
                        android:textColor="@color/floralwhite"
                        android:textSize="26sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_sounds"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="0dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10dp"
                    android:background="@color/floralwhite"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/iv_sounds"
                        android:layout_width="@dimen/_110sdp"
                        android:layout_height="@dimen/_90sdp"
                        />

                    <TextView
                        android:id="@+id/tv_fx"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/naranjad"
                        android:gravity="center"
                        android:text="@string/tv_fx_String"
                        android:textColor="@color/floralwhite"
                        android:textSize="26sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>